# breeze

./: CMakeLists.txt  Makefile  README.md  TODO
scripts/: setup.cpp  setup.hpp
src/: args.cpp  args.hpp  main.cpp
src/core/: checkUpdate.cpp  checkUpdate.hpp  duplicateInstall.cpp  duplicateInstall.hpp  install.cpp  install.hpp  uninstall.cpp  uninstall.hpp  update.cpp  update.hpp
src/list/: list.cpp  list.hpp  remove.cpp  remove.hpp  write.cpp  write.hpp
utils/: CheckDupInstall.cpp  CheckDupInstall.hpp  Logger.cpp  Logger.hpp  System.cpp  System.hpp  SystemInstall.cpp  SystemInstall.hpp  SystemUninstall.cpp  SystemUninstall.hpp  args.cpp  args.hpp  getOs.cpp  getOs.hpp  installBrew.cpp  installBrew.hpp  installChoco.cpp  installChoco.hpp  scripts.hpp
